--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,4 +22,9 @@
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
     <color name="ltgray">#ffe0e0e0</color>
+
+    <color name="colorPrimary">@color/material_deep_orange_500</color>
+    <color name="colorPrimaryDark">@color/material_deep_orange_700</color>
+    <color name="colorAccent">@color/material_deep_orange_accent_200</color>
+
 </resources>
