Added Material Style to Article List Items, Added the same spacing to all Articles in the List

--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -42,6 +42,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
+            android:paddingEnd="@dimen/card_margin_half"
+            android:paddingLeft="@dimen/card_margin_half"
+            android:paddingRight="@dimen/card_margin_half"
+            android:paddingStart="@dimen/card_margin_half"
             android:scrollbarStyle="outsideOverlay"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
