--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -2,10 +2,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,29 +20,46 @@
 
         <TextView
             android:id="@+id/article_title"
-            style="@style/TextAppearance.AppCompat.Medium"
+            style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/card_content_margin_vertical"
+            android:layout_marginEnd="@dimen/card_content_margin_horizontal"
+            android:layout_marginLeft="@dimen/card_content_margin_horizontal"
+            android:layout_marginRight="@dimen/card_content_margin_horizontal"
+            android:layout_marginStart="@dimen/card_content_margin_horizontal"
+            android:layout_marginTop="@dimen/card_content_margin_vertical"
             android:ellipsize="end"
-            android:maxLines="4"
-            android:paddingBottom="4dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="16dp"
-            android:textColor="@color/ltgray"/>
+            android:maxLines="4"/>
 
         <TextView
-            android:id="@+id/article_subtitle"
-            style="@style/TextAppearance.AppCompat.Body1"
+            android:id="@+id/article_author"
+            style="@style/TextAppearance.AppCompat.Caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/card_content_margin_horizontal"
+            android:layout_marginLeft="@dimen/card_content_margin_horizontal"
+            android:layout_marginRight="@dimen/card_content_margin_horizontal"
+            android:layout_marginStart="@dimen/card_content_margin_horizontal"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingBottom="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:singleLine="true"
-            android:textColor="#6000"/>
+            />
+
+
+        <TextView
+            android:id="@+id/article_publish_date"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/card_content_margin_vertical"
+            android:layout_marginEnd="@dimen/card_content_margin_horizontal"
+            android:layout_marginLeft="@dimen/card_content_margin_horizontal"
+            android:layout_marginRight="@dimen/card_content_margin_horizontal"
+            android:layout_marginStart="@dimen/card_content_margin_horizontal"
+            android:ellipsize="end"
+            android:maxLines="1"
+            />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
