--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -21,24 +21,29 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
+
+            <ImageView
+                android:id="@+id/photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                tools:ignore="ContentDescription"/>
+
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true">
-
-                <ImageView
-                    android:id="@+id/photo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
-                    tools:ignore="ContentDescription"/>
+                android:fitsSystemWindows="true"
+                >
 
                 <LinearLayout
                     android:id="@+id/photo_description_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
+                    android:elevation="@dimen/cardview_default_elevation"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/content_margin_vertical"
                     android:paddingEnd="@dimen/content_margin_horizontal"
@@ -46,7 +51,7 @@
                     android:paddingRight="@dimen/content_margin_horizontal"
                     android:paddingStart="@dimen/content_margin_horizontal"
                     android:paddingTop="@dimen/content_margin_vertical"
-                    >
+                    tools:targetApi="lollipop">
 
                     <TextView
                         android:id="@+id/article_title"
@@ -87,6 +92,8 @@
                     style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     />
             </android.support.v7.widget.Toolbar>
 
